--- a/auto_transporter/app.cfg
+++ b/auto_transporter/app.cfg
@@ -11,6 +11,7 @@ ATT_MOD("app.o");
 ATT_MOD("util.o");
 ATT_MOD("timer.o");
 ATT_MOD("porter.o");
+ATT_MOD("direction_changer.o");
 ATT_MOD("line_tracer.o");
 ATT_MOD("linemon.o");
 ATT_MOD("driver.o");
